src/test/deca/syntax/valid/created/affect_NULL/INT.deca
// Description:
//		Affecter null a un int
// Resultats:
//		OK

{
	int x = null;
}
