src/test/deca/syntax/invalid/created/no_init_but_value/int.deca
// Description:
//      Pas d'initialisation mais valeur donnee
// Resultats:
//      Error Ligne 7 : extraneous input '8' expecting ';'

{
    int x 8;
}